feat: add sidebar user

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,14 +63,19 @@ body {
 }
 
 #LandingPage {
-  background-image: url("../../public/assets/Group\ 26953.png");
+  background-image: url("../../public/assets/Group_26953.png");
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
 }
+#sidebar {
+  background-image: url("../../public/assets/Group_26953.png");
+  background-position: top;
+  background-repeat: no-repeat;
+}
 
 #loginPage {
-  background-image: url("../../public/assets/Group\ 26953.png");
+  background-image: url("../../public/assets/Group_26953.png");
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
