--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,8 +81,8 @@ body {
   background-size: cover;
 }
 
-#About {
-  background-image: url("../../public/assets/bgabout.png");
+#docs {
+  background-image: url("../../public/assets/Group_26953.png");
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
