feat: add contact support

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,6 +87,12 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
+#support {
+  background-image: url("../../public/assets/Group_26953.png");
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
 .app {
   display: flex;
